# monthly_budget

./: .gitignore  Cargo.toml  README.md  main_todo.md
.github/workflows/: check_spec_lint.yml
data/: account_1_summary.csv  account_balances.csv  accounts.csv  all_payments.csv  all_payments_received.csv  amounts.csv  expense_summary.csv  expenses.csv  incomes.csv  payments.csv  payments_received.csv
data/events/: one_off.json  reccurring.json
data/init/: account_balances.csv  amounts.csv  expenses.csv  incomes.csv  payments.csv  payments_received.csv
data/reports/: 2023_03_account_1_summary.csv  2023_03_account_2_summary.csv  2023_03_all_payments.csv  2023_03_all_payments_received.csv  2023_03_expense_summary.csv  2023_04_account_1_summary.csv  2023_04_account_2_summary.csv  2023_04_all_payments.csv  2023_04_all_payments_received.csv  2023_04_expense_summary.csv  2023_04_income_summary.csv  2023_05_account_1_summary.csv  2023_05_account_2_summary.csv  2023_05_all_payments.csv  2023_05_all_payments_received.csv  2023_05_expense_summary.csv  2023_06_account_1_summary.csv  2023_06_account_2_summary.csv  2023_06_all_payments.csv  2023_06_all_payments_received.csv  2023_06_expense_summary.csv  2023_07_account_1_summary.csv  2023_07_account_2_summary.csv  2023_07_all_payments.csv  2023_07_all_payments_received.csv  2023_08_account_1_summary.csv  2023_08_account_2_summary.csv  2023_08_all_payments.csv  (+13 more)
src/: bin.rs  lib.rs  main.rs
test_data/: account_balances.csv  accounts.csv  amounts.csv  budget.csv  expenses.csv  incomes.csv  payments.csv  payments_received.csv
(+142 files in other folders)
