[package]
name = "monthly_budget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
csv = "1.1.6"
rand = "0.8.5"
rustls = "0.20.7"
serde = { version = "1.0", features = ["derive"] }
# sqlx = "0.6.2" //TODO: debug install
time = "0.3.17"
