[package]
name = "monthly_budget"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = "4.1.4"
csv = "1.1.6"
rand = "0.8.5"
rust_decimal = { version = "1.28.0", features = ["serde-with-float", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
